crates/vite_task_bin/tests/e2e_snapshots/fixtures/task-list/snapshots/list tasks from workspace root.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
input_file: crates/vite_task_bin/tests/e2e_snapshots/fixtures/task-list
---
> vp run
Tasks in the current package (task-list-test)
  hello
    echo hello from root
  list-tasks
    vp run

Tasks in other packages
  app#build
    echo build app
  app#lint
    echo lint app
  app#test
    echo test app
  lib#build
    echo build lib
